<resources>
    <string name="app_name">TripTrip</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="search_trip">Search trip</string>
    <string name="attend_user">參與者:</string>
    <string name="spot_name_title">地點名稱</string>
    <string name="trip_name_title">行程名稱</string>
    <string name="change_trip_name_title">更改名稱</string>
    <string name="start_time">開始時間</string>
    <string name="stay_time">預計停留</string>
    <string name="add_spot">標記地圖</string>
    <string name="spot_type">景點類型</string>
    <string name="spot_content">行程內容</string>
    <string name="upload_picture">上傳圖片</string>
    <string name="ok">確定</string>
    <string name="cancel">取消</string>
    <string name="upload_trip_background">上傳底圖</string>
    <string name="add_attend_user">加入夥伴</string>
    <string name="change_attend_user">變更參與</string>
    <string name="add_new_trip">Add Your Trip</string>
    <string name="add_new_spot">Add New Spot</string>
    <string name="profile_information">Logout!!</string>
    <string name="login_success">登入成功</string>
    <string name="login_del_success">刪除成功</string>
    <string name="Unknown_error">Unknown error!!!!!!!!!!!!!</string>
    <string name="input_data_lack">你輸入的資料有缺喔!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_attend_user">選擇參與者</string>
    <string name="last_edit">最後編輯:</string>
    <string name="add_success">新增成功</string>
    <string name="change_date_range">更改日期</string>
    <string name="now_no_data">目前沒有任何資料喔，立即新增吧!</string>
    <string name="no_notifications">目前沒有任何通知!</string>
    <string name="no_message">目前沒有訊息，與夥伴聊聊吧。</string>
    <string name="spot_photo">景點相簿:</string>
    <string name="please_add_photo">相簿是空的喔，快新增吧。</string>
    <string name="member">Member:</string>
    <string name="select_start_time">選擇開始時間</string>
    <string name="one_hr">1HR</string>
    <string name="search_from_map">從地圖搜尋</string>
    <string name="add_your_travel_detail_here">Add your travel detail here.</string>
    <string name="select_date">選擇日期</string>
    <string name="start_date">Start date.</string>
    <string name="end_date">End date.</string>
    <string name="input_message">輸入訊息</string>
    <string name="trip_name">旅程名稱</string>
    <string name="sign_bug">~</string>
    <string name="google_sign_in">使用 Google 帳戶登入</string>
    <string name="input_spot_name_here">Input spot name here.</string>
    <string name="stay">Stay</string>
    <string name="notification_added"> 已將你加入 </string>
    <string name="notification_member"> 的夥伴，一起來規劃行程吧!!</string>
    <string name="click_again_to_exit">再點擊一次離開</string>
    <string name="select_date_first_plz">請先選擇日期</string>
    <string name="refresh_data_success">更新資料成功</string>
    <string name="my_trip_id">MY TRIP ID</string>
    <string name="load_pic_success">Load picture success.</string>
    <string name="load_pic_fail">Load picture fail.</string>
    <string name="setting">設定</string>
    <string name="makesure_change_setting">確定要變更設定?</string>
    <string name="authentication_fail">Authentication Failed.</string>
    <string name="select_position_yet">你還沒有選擇地點喔</string>
    <string name="empty_input">輸入的訊息是空的喔</string>
    <string name="add_trip_success">新增旅程成功</string>
    <string name="DEFAULT_MAIN_IMAGE_URL">https://i.imgur.com/QZdKyq8.jpg</string>
    <string name="input_spot_info">請輸入景點資訊</string>
    <string name="selected">已選擇</string>
</resources>