<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.emil.triptrip.ui.modify.ModifyTripViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.modify.ModifyTripFragment">

        <ScrollView
            android:id="@+id/scrollview_modify_trip"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/constraint_modify_trip_submit_select"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="0dp"
                    android:layout_height="180dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img_add_spot_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline_add_trip_left"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="16dp" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline_add_trip_right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_end="16dp" />


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraint_modify_trip_range"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_add_spot_card"
                    app:layout_constraintEnd_toStartOf="@+id/guideline_add_trip_right"
                    app:layout_constraintHorizontal_bias="0.493"
                    app:layout_constraintStart_toStartOf="@+id/guideline_add_trip_left"
                    app:layout_constraintTop_toBottomOf="@+id/imageView">

                    <TextView
                        android:id="@+id/text_modify_trip_date_range_title"
                        style="@style/add_spot_title_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:background="@drawable/shape_add_spot_title"
                        android:text="@string/change_date_range"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="0dp"
                        android:layout_height="48dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="16dp"
                        android:background="@drawable/shape_underline"
                        android:gravity="center"
                        android:hint="Start date."
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/textView2"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/text_modify_trip_date_range_title"
                        app:timeTransfer="@{viewModel.startDay}"/>

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="0dp"
                        android:layout_height="48dp"
                        android:layout_marginStart="32dp"
                        android:layout_marginEnd="16dp"
                        android:background="@drawable/shape_underline"
                        android:gravity="center"
                        android:hint="End date."
                        app:layout_constraintBottom_toBottomOf="@+id/textView"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/textView"
                        app:layout_constraintTop_toTopOf="@+id/textView"
                        app:timeTransfer="@{viewModel.endDay}"/>


                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraint_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/shape_add_spot_card"
                    android:padding="16dp"
                    app:layout_constraintEnd_toStartOf="@+id/guideline_add_trip_right"
                    app:layout_constraintStart_toStartOf="@+id/guideline_add_trip_left"
                    app:layout_constraintTop_toBottomOf="@+id/constraint_modify_trip_range">

                    <EditText
                        android:id="@+id/editText_spot_title"
                        android:layout_width="0dp"
                        android:layout_height="48dp"
                        android:layout_marginStart="16dp"
                        android:background="@drawable/shape_underline"
                        android:ems="10"
                        android:text="@={viewModel.tripTitle}"
                        android:hint="Input spot name here."
                        android:inputType="textPersonName"
                        android:textAlignment="center"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/text_spot_title"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/text_spot_title"
                        style="@style/add_spot_title_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/shape_add_spot_title"
                        android:text="@string/change_trip_name_title"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraint_modify_attend_user"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/shape_add_spot_card"
                    android:padding="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/guideline_add_trip_right"
                    app:layout_constraintStart_toStartOf="@+id/guideline_add_trip_left"
                    app:layout_constraintTop_toBottomOf="@+id/constraint_title">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler_modify_attend_user"
                        android:layout_width="0dp"
                        android:layout_height="48dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="8dp"
                        android:orientation="horizontal"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/button_modify_attend_user"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/text_modify_attend_user_title" />

                    <TextView
                        android:id="@+id/text_modify_attend_user_title"
                        style="@style/add_spot_title_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/shape_add_spot_title"
                        android:text="@string/change_attend_user"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageButton
                        android:id="@+id/button_modify_attend_user"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:background="@drawable/shape_circle_btn"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_baseline_add_circle_24"
                        app:layout_constraintBottom_toBottomOf="@+id/recycler_modify_attend_user"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/recycler_modify_attend_user"
                        app:layout_constraintVertical_bias="0.0" />


                    <TextView
                        android:id="@+id/text_add_attend_user"
                        android:layout_width="0dp"
                        android:layout_height="48dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="8dp"
                        android:background="@drawable/shape_underline"
                        android:gravity="center"
                        android:hint="選擇參與者"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/button_modify_attend_user"
                        app:layout_constraintHorizontal_chainStyle="packed"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/text_modify_attend_user_title"
                        tools:text="@string/select_attend_user" />


                </androidx.constraintlayout.widget.ConstraintLayout>



            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_modify_trip_submit_select"
            android:layout_width="0dp"
            android:layout_height="64dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/button_submit_modify"
                style="@style/add_spot_button"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="8dp"
                android:paddingTop="2dp"
                android:background="@drawable/shape_add_spot_title"
                android:text="@string/ok"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/button_cancel_submit_modify"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button_cancel_submit_modify"
                style="@style/add_spot_button"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="16dp"
                android:paddingTop="2dp"
                android:background="@drawable/shape_add_spot_title"
                android:text="@string/cancel"
                app:layout_constraintBottom_toBottomOf="@+id/button_submit_modify"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/button_submit_modify"
                app:layout_constraintTop_toTopOf="@+id/button_submit_modify" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>